--- a/modulo-04/ex026/mq002/style.css
+++ b/modulo-04/ex026/mq002/style.css
@@ -1,12 +1,30 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
     background-color: antiquewhite;
     font-family: Arial, Helvetica, sans-serif;
+    padding: 20px;
+
 }
 
 h1 {
     font-size: 3em;
 }
-
+textarea {
+    resize: none;
+    padding: 10px;
+    width: 80%;
+    margin: auto;
+    margin: 20px;
+    border: none;
+    border-radius: 20px;
+} textarea:focus {
+    outline: none;
+}
 p {
     font-size: 1em;
 }
