--- a/modulo-04/ex026/mq005/style.css
+++ b/modulo-04/ex026/mq005/style.css
@@ -55,7 +55,7 @@ main {
     width: 90%;
     background-color: white;
     padding: 20px;
-
+    max-width: 1000px;
     margin: auto;
     padding: 10px;
     border-radius: 10px;
@@ -69,4 +69,21 @@ article > p {
     text-align: justify;
     margin-bottom: 20px;
     text-indent: 20px;
+}
+
+@media screen and (min-width: 600px){
+    menu {
+        display: block;
+    }
+    menu > ul > li {
+        display: inline-block;
+    }
+    menu > ul >li >a {
+        padding: 10px 20px;
+        border-left: 2px solid black;
+        border-right: 2px solid black;
+    }
+    i#burguer {
+        display: none;
+    }
 }
